Add the training codes

--- a/dataset_creator.ipynb
+++ b/dataset_creator.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -59,90 +59,20 @@
      "text": [
       "3185\n",
       "['Bubbles', 'Ceriodaphnia_sp', 'Copepoda_calanoida', 'Copepoda_cyclopoida', 'Copepoda_nauplius', 'Daphnia_sp', 'Evadne_sp', 'Fibers_etc', 'Gastropoda', 'Podon_sp', 'Polychaeta', 'Synchaeta_sp']\n",
-      "13\n",
-      "116\n",
-      "1864\n",
-      "27\n",
-      "63\n",
-      "163\n",
-      "51\n",
-      "155\n",
-      "22\n",
-      "85\n",
-      "231\n",
-      "395\n",
-      "3185\n",
-      "\n",
       "2543\n",
       "['Bivalvia', 'Bivalvia_multiple', 'Bosmina_sp', 'Copepoda_cyclopoida', 'Copepoda_nauplius', 'Daphnia_sp', 'Evadne_sp', 'Fibers_etc', 'Gastropoda', 'Podon_sp', 'Polychaeta', 'Synchaeta_sp']\n",
-      "59\n",
-      "15\n",
-      "1277\n",
-      "27\n",
-      "63\n",
-      "163\n",
-      "51\n",
-      "155\n",
-      "22\n",
-      "85\n",
-      "231\n",
-      "395\n",
-      "2543\n",
-      "\n",
       "4283\n",
       "['Bivalvia', 'Bivalvia_multiple', 'Bosmina_sp', 'Bubbles', 'Ceriodaphnia_sp', 'Copepoda_calanoida', 'Evadne_sp', 'Fibers_etc', 'Gastropoda', 'Podon_sp', 'Polychaeta', 'Synchaeta_sp']\n",
-      "59\n",
-      "15\n",
-      "1277\n",
-      "13\n",
-      "116\n",
-      "1864\n",
-      "51\n",
-      "155\n",
-      "22\n",
-      "85\n",
-      "231\n",
-      "395\n",
-      "4283\n",
-      "\n",
       "4308\n",
       "['Bivalvia', 'Bivalvia_multiple', 'Bosmina_sp', 'Bubbles', 'Ceriodaphnia_sp', 'Copepoda_calanoida', 'Copepoda_cyclopoida', 'Copepoda_nauplius', 'Daphnia_sp', 'Podon_sp', 'Polychaeta', 'Synchaeta_sp']\n",
-      "59\n",
-      "15\n",
-      "1277\n",
-      "13\n",
-      "116\n",
-      "1864\n",
-      "27\n",
-      "63\n",
-      "163\n",
-      "85\n",
-      "231\n",
-      "395\n",
-      "4308\n",
-      "\n",
       "3825\n",
-      "['Bivalvia', 'Bivalvia_multiple', 'Bosmina_sp', 'Bubbles', 'Ceriodaphnia_sp', 'Copepoda_calanoida', 'Copepoda_cyclopoida', 'Copepoda_nauplius', 'Daphnia_sp', 'Evadne_sp', 'Fibers_etc', 'Gastropoda']\n",
-      "59\n",
-      "15\n",
-      "1277\n",
-      "13\n",
-      "116\n",
-      "1864\n",
-      "27\n",
-      "63\n",
-      "163\n",
-      "51\n",
-      "155\n",
-      "22\n",
-      "3825\n",
-      "\n"
+      "['Bivalvia', 'Bivalvia_multiple', 'Bosmina_sp', 'Bubbles', 'Ceriodaphnia_sp', 'Copepoda_calanoida', 'Copepoda_cyclopoida', 'Copepoda_nauplius', 'Daphnia_sp', 'Evadne_sp', 'Fibers_etc', 'Gastropoda']\n"
      ]
     }
    ],
    "source": [
     "from dataset_process.dataset_creator import get_datasets\n",
-    "from train_transforms import train_test_transform\n",
+    "from train_utils import train_test_transform\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
