--- a/dataset_creator.ipynb
+++ b/dataset_creator.ipynb
@@ -8,6 +8,12 @@
    "source": [
     "from dataset_process.dataset_splitter import split_datasets\n",
     "from dataset_process.transformation import SYKE2024_zoo_transform, SYKE2022_phyto_transform\n",
+    "import torch\n",
+    "import random\n",
+    "import numpy as np\n",
+    "torch.manual_seed(42)\n",
+    "random.seed(42)\n",
+    "np.random.seed(42)\n",
     "\n",
     "CLASS_SPLIT_PATHS = {\n",
     "    'zooplankton': \"./data/class_splits/SYKE-plankton_ZooScan_2024\",\n",
