--- a/dataset_creator.ipynb
+++ b/dataset_creator.ipynb
@@ -26,8 +26,8 @@
     "}\n",
     "\n",
     "OUTPUT_FOLDER_NAMES = {\n",
-    "    'zooplankton': \"Zooplankton_224\",\n",
-    "    'phytoplankton': \"Phytoplankton_224\",\n",
+    "    'zooplankton': \"zooplankton_224\",\n",
+    "    'phytoplankton': \"phytoplankton_224\",\n",
     "}\n",
     "\n",
     "image_size = (224, 224)\n",
